<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView2"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="29dp"/>
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:padding="0dp"
        android:rowCount="6"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FaC"
            tools:layout_editor_absoluteX="196dp"
            tools:layout_editor_absoluteY="66dp" />

        <Button
            android:id="@+id/cas"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:text="@string/CaK"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="140dp" />

        <Button
            android:id="@+id/vaf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CaF"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="66dp" />

        <Button
            android:id="@+id/kac"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:text="@string/KaC"
            tools:layout_editor_absoluteX="196dp"
            tools:layout_editor_absoluteY="140dp" />
    </GridLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView1"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="225dp" />
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:padding="0dp"
        android:rowCount="6"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">


        <Button
            android:id="@+id/mac"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:text="@string/MaC"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="279dp" />

        <Button
            android:id="@+id/cam"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/CaM"
            tools:layout_editor_absoluteX="188dp"
            tools:layout_editor_absoluteY="279dp" />

        <Button
            android:id="@+id/cap"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:text="@string/CaP"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="353dp" />

        <Button
            android:id="@+id/pac"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/PaC"
            tools:layout_editor_absoluteX="198dp"
            tools:layout_editor_absoluteY="353dp" />




    </GridLayout>


</LinearLayout>